# synthetic_data

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.ini
configs/: default.yaml  epic2_dataset.yaml  epic2_generate.yaml  epic2_train.yaml  epic3_cyclegan.yaml  epic4_baseline.yaml  epic4_dann.yaml  epic4_data.yaml  epic4_evaluate.yaml  epic5_active.yaml  epic6_bond_wire.yaml  epic7_chromasense.yaml  epic8_universal.yaml  epic9_crack.yaml
docs/: EPIC_INDEX.md
docs/superpowers/specs/: 2026-03-28-epic3-cyclegan-design.md  2026-03-28-epic4-dann-design.md  2026-03-28-epic5-active-dann-design.md  2026-03-28-epic678-future-design.md
nbs/: 00_overview.ipynb  01_physics.ipynb  02_void_shapes.ipynb  03_generator.ipynb  04_pipeline.ipynb  05_augmentation.ipynb  06_real_void_analysis.ipynb  07_validation_metrics.ipynb  100_tutorial.ipynb  epic1_100_tutorial_real_backgrounds.ipynb  epic2_00_gan_overview.ipynb  epic2_01_dataset_prep.ipynb  epic3_00_overview.ipynb  epic3_01_data_prep.ipynb  epic3_02_training.ipynb  epic3_03_defect_aware.ipynb  epic3_04_evaluation.ipynb  epic3_05_downstream.ipynb  epic3_06_multisite.ipynb  epic4_00_overview.ipynb  epic4_01_data_analysis.ipynb  epic4_02_baseline.ipynb  epic4_03_dann_training.ipynb  epic4_04_domain_analysis.ipynb  epic4_05_deployment.ipynb  epic4_06_failure_analysis.ipynb  epic5_00_overview.ipynb  epic5_01_uncertainty.ipynb  epic5_02_diversity.ipynb  epic5_03_combined.ipynb  epic5_04_labeling.ipynb  epic5_05_active_dann.ipynb  epic5_06_convergence.ipynb  epic6_00_overview.ipynb  epic6_01_wire_generation.ipynb  epic6_02_defect_types.ipynb  epic6_03_rendering.ipynb  epic7_00_overview.ipynb  epic7_01_spectral_model.ipynb  epic7_02_defect_spectra.ipynb  (+9 more)
scripts/: generate_dataset.py
scripts/analysis/: analyze_real_voids.py
scripts/epic2/: extract_defect_crops.py
scripts/validation/: compare_distributions.py
tests/: test_epic1.py  test_epic2.py  test_epic3.py  test_epic4.py  test_epic5.py  test_epic6.py  test_epic7.py  test_epic8.py  test_epic9.py
udm_epic1/: __init__.py  _modidx.py  cli.py
udm_epic1/augmentation/: transforms.py
udm_epic1/dataset/: pipeline.py
udm_epic1/generators/: sample_generator.py  void_shapes.py
udm_epic1/physics/: beer_lambert.py
udm_epic1/validation/: __init__.py  mask_stats.py
udm_epic2/: __init__.py  cli_epic2.py
udm_epic2/conditioning/: __init__.py  edges.py
udm_epic2/dataset/: __init__.py  crops.py  hf_export.py
udm_epic2/generation/: __init__.py  inference.py
udm_epic2/integration/: __init__.py  paste.py
udm_epic2/quality/: __init__.py  filter.py
udm_epic2/training/: __init__.py  controlnet_train.py  dataset_sd.py
udm_epic3/: __init__.py  cli_epic3.py
udm_epic3/data/: __init__.py  image_pool.py  unpaired_dataset.py
udm_epic3/evaluation/: __init__.py  quality_metrics.py
udm_epic3/models/: __init__.py  cyclegan.py  discriminator.py  generator.py  losses.py
udm_epic3/training/: __init__.py  train_cyclegan.py
udm_epic3/translation/: __init__.py  translate.py
udm_epic4/: __init__.py  cli_epic4.py
udm_epic4/data/: __init__.py  domain_sampler.py  multi_domain_dataset.py
udm_epic4/evaluation/: __init__.py  domain_analysis.py  metrics.py
udm_epic4/models/: __init__.py  dann.py  decoder.py  domain_classifier.py  encoder.py
udm_epic4/reporting/: __init__.py  failure_analysis.py
udm_epic4/training/: __init__.py  lambda_scheduler.py  train_baseline.py  train_dann.py
udm_epic5/: __init__.py  cli_epic5.py
udm_epic5/active_training/: __init__.py  train_active_dann.py
udm_epic5/analysis/: __init__.py  convergence.py  learning_curve.py
udm_epic5/labeling/: __init__.py  session.py
udm_epic5/selection/: __init__.py  combined.py  diversity.py
udm_epic5/uncertainty/: __init__.py  mc_dropout.py
udm_epic6/: __init__.py  cli_epic6.py
udm_epic6/data/: __init__.py  dataset.py
udm_epic6/evaluation/: __init__.py  metrics.py
udm_epic6/models/: __init__.py  defect_generator.py  wire_geometry.py
udm_epic6/rendering/: __init__.py  aoi_renderer.py
udm_epic7/: __init__.py  cli_epic7.py
udm_epic7/data/: __init__.py  dataset.py
udm_epic7/evaluation/: __init__.py  spectral_metrics.py
udm_epic7/rendering/: __init__.py  spectral_renderer.py
udm_epic7/spectral/: __init__.py  defect_spectra.py  wavelength_model.py
udm_epic8/: __init__.py  cli_epic8.py
udm_epic8/evaluation/: __init__.py  cross_modality.py
udm_epic8/export/: __init__.py  dataset_export.py
udm_epic8/pipeline/: __init__.py  unified.py
udm_epic8/registry/: __init__.py  modality_registry.py
udm_epic9/: __init__.py  cli_epic9.py
udm_epic9/data/: __init__.py  crack_dataset.py
udm_epic9/domain_transfer/: __init__.py  usm_to_rgb.py
udm_epic9/evaluation/: __init__.py  crack_metrics.py
udm_epic9/models/: __init__.py  crack_geometry.py  crack_types.py
udm_epic9/rendering/: __init__.py  usm_renderer.py
